GitBook: [#346] Adding IDE configuration section.  Closes: https://github.com/openrewrite/rewrite/issues/1254